--- a/docker/.env
+++ b/docker/.env
@@ -2,7 +2,7 @@ DAGSTER_HOME=/opt/dagster/dagster_home
 TOOLS_DIR=${PWD}/.build-3dbag-pipeline
 
 BAG3D_VENVS=${PWD}/venvs
-BAG3D_TEST_DATA=${PWD}/tests/test_data
+BAG3D_TEST_DATA=/data/test_data
 BAG3D_FLOORS_ESTIMATION_MODEL=${BAG3D_TEST_DATA}/model/pipeline_model1_gbr_untuned.joblib
 BAG3D_EXPORT_DIR=${BAG3D_TEST_DATA}/reconstruction_input/3DBAG/export
 
