CI integration tests

--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
 DAGSTER_HOME=/opt/dagster/dagster_home
-TOOLS_DIR=/3dbag-pipeline/.build-3dbag-pipeline
+TOOLS_DIR=/opt/3dbag-pipeline/tools
 
 BAG3D_VENVS=/3dbag-pipeline/venvs
 BAG3D_TEST_DATA=/data/volume
@@ -15,20 +15,19 @@ BAG3D_PG_HOST=data_postgresql
 BAG3D_PG_PORT=5432
 BAG3D_PG_SSLMODE=allow
 
-TYLER_RESOURCES_DIR=/3dbag-pipeline/.build-3dbag-pipeline/share/tyler/resources
-TYLER_METADATA_JSON=/3dbag-pipeline/.build-3dbag-pipeline/share/tyler/resources/geof/metadata.json
+TYLER_RESOURCES_DIR=/opt/3dbag-pipeline/tools/share/tyler/resources
+TYLER_METADATA_JSON=/opt/3dbag-pipeline/tools/share/tyler/resources/geof/metadata.json
 
-LD_LIBRARY_PATH=/3dbag-pipeline/.build-3dbag-pipeline/lib:$LD_LIBRARY_PATH
-PROJ_DATA=/3dbag-pipeline/.build-3dbag-pipeline/share/proj
-EXE_PATH_TYLER=/3dbag-pipeline/.build-3dbag-pipeline/bin/tyler
-EXE_PATH_TYLER_DB=/3dbag-pipeline/.build-3dbag-pipeline/bin/tyler-db
-EXE_PATH_ROOFER_CROP=/3dbag-pipeline/.build-3dbag-pipeline/bin/crop
-EXE_PATH_ROOFER_RECONSTRUCT=/3dbag-pipeline/.build-3dbag-pipeline/bin/geof
-FLOWCHART_PATH_RECONSTRUCT=/3dbag-pipeline/.build-3dbag-pipeline/share/geoflow-bundle/flowcharts/reconstruct_bag.json
-EXE_PATH_OGR2OGR=/3dbag-pipeline/.build-3dbag-pipeline/bin/ogr2ogr
-EXE_PATH_OGRINFO=/3dbag-pipeline/.build-3dbag-pipeline/bin/ogrinfo
-EXE_PATH_SOZIP=/3dbag-pipeline/.build-3dbag-pipeline/bin/sozip
-EXE_PATH_PDAL=/3dbag-pipeline/.build-3dbag-pipeline/bin/pdal
-EXE_PATH_LAS2LAS=/3dbag-pipeline/.build-3dbag-pipeline/bin/las2las64
-EXE_PATH_LASINDEX=/3dbag-pipeline/.build-3dbag-pipeline/bin/lasindex64
+PROJ_DATA=/opt/3dbag-pipeline/tools/share/proj
+EXE_PATH_TYLER=/opt/3dbag-pipeline/tools/bin/tyler
+EXE_PATH_TYLER_DB=/opt/3dbag-pipeline/tools/bin/tyler-db
+EXE_PATH_ROOFER_CROP=/opt/3dbag-pipeline/tools/bin/crop
+EXE_PATH_ROOFER_RECONSTRUCT=/opt/3dbag-pipeline/tools/bin/geof
+FLOWCHART_PATH_RECONSTRUCT=/opt/3dbag-pipeline/tools/share/geoflow-bundle/flowcharts/reconstruct_bag.json
+EXE_PATH_OGR2OGR=/opt/3dbag-pipeline/tools/bin/ogr2ogr
+EXE_PATH_OGRINFO=/opt/3dbag-pipeline/tools/bin/ogrinfo
+EXE_PATH_SOZIP=/opt/3dbag-pipeline/tools/bin/sozip
+EXE_PATH_PDAL=/opt/3dbag-pipeline/tools/bin/pdal
+EXE_PATH_LAS2LAS=/opt/3dbag-pipeline/tools/bin/las2las64
+EXE_PATH_LASINDEX=/opt/3dbag-pipeline/tools/bin/lasindex64
 
