--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -20,6 +20,7 @@ jobs:
       run: |
         make build_volume
         make run
+        sleep 5
     - name: Test core
       working-directory: docker
       run: |
