--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -16,9 +16,13 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+    - run: |
+        touch .env
+        echo BAG3D_TEST_DATA=${PWD}/tests/test_data >> .env
     - name: Build docker images
       run: |
         cp docker/.env .
+        make download
         make build_volume
         make run
         sleep 5
