--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,8 @@
 DAGSTER_HOME=/opt/dagster/dagster_home
+DAGSTER_POSTGRES_USER="postgres_user"
+DAGSTER_POSTGRES_PASSWORD="postgres_password"
+DAGSTER_POSTGRES_DB="postgres_db"
+
 TOOLS_DIR=/opt/3dbag-pipeline/tools
 
 BAG3D_VENVS=/3dbag-pipeline/venvs
@@ -11,8 +15,9 @@ BAG3D_PG_DOCKERIMAGE=bag3d_image_postgis
 BAG3D_PG_USER=baseregisters_test_user
 BAG3D_PG_PASSWORD=baseregisters_test_pswd
 BAG3D_PG_DATABASE=baseregisters_test
-BAG3D_PG_HOST=data_postgresql
+BAG3D_PG_HOST=data-postgresql
 BAG3D_PG_PORT=5432
+BAG3D_PG_PORT_ON_HOST=5560
 BAG3D_PG_SSLMODE=allow
 
 TYLER_RESOURCES_DIR=/opt/3dbag-pipeline/tools/share/tyler/resources
