--- a/docker/dagster/Dockerfile
+++ b/docker/dagster/Dockerfile
@@ -1,20 +1,13 @@
 # Dagster libraries to run both dagster-webserver and the dagster-daemon. Does not
 # need to have access to any pipeline code.
-
 FROM python:3.12-slim
 
-RUN pip install \
-    dagster \
-    dagster-graphql \
-    dagster-webserver \
-    dagster-postgres \
-    dagster-docker
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 
 # Set $DAGSTER_HOME and copy dagster instance and workspace YAML there
 ENV DAGSTER_HOME=/opt/dagster/dagster_home/
-
 RUN mkdir -p $DAGSTER_HOME
-
 COPY dagster.yaml workspace.yaml $DAGSTER_HOME
 
 WORKDIR $DAGSTER_HOME
