--- a/.github/workflows/build-docker-develop.yaml
+++ b/.github/workflows/build-docker-develop.yaml
@@ -1,10 +1,14 @@
 name: Build and Publish Docker Images
 
 on:
+  push:
+    tags:
+      - '202[2-9].[0-9]+.[0-9]+'
+      - '202[2-9].[0-9]+-pc[0-9]+'
   pull_request:
     branches:
       - develop
-    types: [closed]
+    types: [ closed ]
   workflow_dispatch:
 
 jobs:
@@ -12,6 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set docker image tag to 'develop'
+        if: github.ref == 'refs/heads/develop'
+        run: echo "DOCKER_TAG=develop" >> $GITHUB_ENV
+      - name: Set docker image tag to git tag
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo "DOCKER_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -56,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: ./docker/dagster
-          file: ./Dockerfile
+          file: ./docker/dagster/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           build-args: |
             JOBS=2
