--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -75,6 +75,21 @@ services:
       data-postgresql:
         condition: service_healthy
         restart: true
+    develop:
+      watch:
+        - action: sync
+          path: ../packages/common
+          target: /opt/3dbag-pipeline/packages/common
+        - action: rebuild
+          path: ../packages/common/pyproject.toml
+          target: /opt/3dbag-pipeline/packages/common/pyproject.toml
+        - action: sync
+          path: ../packages/core
+          target: /opt/3dbag-pipeline/packages/core
+        - action: rebuild
+          path: ../packages/core/pyproject.toml
+          target: /opt/3dbag-pipeline/packages/core/pyproject.toml
+
   bag3d-floors-estimation:
     build:
       context: ../
@@ -96,6 +111,20 @@ services:
       data-postgresql:
         condition: service_healthy
         restart: true
+    develop:
+      watch:
+        - action: sync
+          path: ../packages/common
+          target: /opt/3dbag-pipeline/packages/common
+        - action: rebuild
+          path: ../packages/common/pyproject.toml
+          target: /opt/3dbag-pipeline/packages/common/pyproject.toml
+        - action: sync
+          path: ../packages/floors_estimation
+          target: /opt/3dbag-pipeline/packages/floors_estimation
+        - action: rebuild
+          path: ../packages/floors_estimation/pyproject.toml
+          target: /opt/3dbag-pipeline/packages/floors_estimation/pyproject.toml
   bag3d-party-walls:
     build:
       context: ../
@@ -117,6 +146,20 @@ services:
       data-postgresql:
         condition: service_healthy
         restart: true
+    develop:
+      watch:
+        - action: sync
+          path: ../packages/common
+          target: /opt/3dbag-pipeline/packages/common
+        - action: rebuild
+          path: ../packages/common/pyproject.toml
+          target: /opt/3dbag-pipeline/packages/common/pyproject.toml
+        - action: sync
+          path: ../packages/party_walls
+          target: /opt/3dbag-pipeline/packages/party_walls
+        - action: rebuild
+          path: ../packages/party_walls/pyproject.toml
+          target: /opt/3dbag-pipeline/packages/party_walls/pyproject.toml
 
   # This service runs dagster-webserver, which loads your user code from the user code container.
   # Since our instance uses the QueuedRunCoordinator, any runs submitted from the webserver will be put on
