Switch to pull request trigger instead of push

--- a/.github/workflows/lint-format-unit-tests.yaml
+++ b/.github/workflows/lint-format-unit-tests.yaml
@@ -1,12 +1,12 @@
 name: Install, Lint, Format, Test
 
 on:
-  push:
+  pull_request:
     branches: [ "develop", "master" ]
     paths-ignore:
       - "docs/**"
       - "**.md"
-#  pull_request:
+#  push:
 #    branches: [ "develop", "master" ]
 #    paths-ignore:
 #      - "docs/**"
