--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -1,12 +1,12 @@
 name: Integration tests
 
 on:
-  push:
+  pull_request:
     branches: [ "develop", "master" ]
     paths-ignore:
       - "docs/**"
       - "**.md"
-#  pull_request:
+#  push:
 #    branches: [ "develop", "master" ]
 #    paths-ignore:
 #      - "docs/**"
