--- a/docker/dagster/dagster.yaml
+++ b/docker/dagster/dagster.yaml
@@ -19,6 +19,8 @@ run_launcher:
       volumes: # Make docker client accessible to any launched containers as well
         - /var/run/docker.sock:/var/run/docker.sock
         - /tmp/io_manager_storage:/tmp/io_manager_storage
+        - bag3d-dev-dagster-home:/opt/dagster/dagster_home
+        - bag3d-dev-data-pipeline:/data/volume
 
 run_storage:
   module: dagster_postgres.run_storage
