--- a/docker/dagster/requirements.txt
+++ b/docker/dagster/requirements.txt
@@ -1,5 +1,5 @@
-dagster==1.8
-dagster-graphql==1.8
-dagster-webserver==1.8
-dagster-postgres==0.24
-dagster-docker==0.24
+dagster~=1.8.13
+dagster-graphql~=1.8.13
+dagster-webserver~=1.8.13
+dagster-postgres~=0.24.13
+dagster-docker~=0.24.13
